fix: z-index

--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -5,4 +5,5 @@
   width: 100vw;
   background-color: #eeeeee;
   padding: 8px;
+  z-index: -1;
 }
